# TiIABD

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: generate_report.yml
src/: report.py  work_report.docx
src/prac1/: extra1.py  extra2.py  extra3.py  task1.py  task2.py  task3.py  task4.py  task5.py  task6-12.py  task6_12.py
